--- a/package.json
+++ b/package.json
@@ -66,5 +66,6 @@
     "@craco/craco": "^6.2.0",
     "postcss-px-to-viewport": "^1.1.1",
     "sass": "^1.38.1"
-  }
+  },
+  "homepage": "https://botue.github.io/geek"
 }
